<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="vertical"
   >
	
     <ImageView
        android:id="@+id/taskImage"
        android:layout_width="50dp"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/imageViewCD"
        android:src="@drawable/take_photo" />
        
        
    <TextView
        android:id="@+id/taskName"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:textColor="#000000"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/taskImage"
        android:text="@string/encodeButtonName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/taskStatus"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_alignParentRight="true"
         android:textColor="#000000"
        android:layout_toRightOf="@id/taskImage"
       	android:layout_below="@id/taskName"
        android:text="@string/decodeButtonName"
        android:textAppearance="?android:attr/textAppearanceSmall" />



    <ImageButton
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/taskImage"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/taskStatus"
        android:layout_marginRight="78dp"
        android:contentDescription="@string/imageViewCD"
        android:src="@drawable/notification_icon" />

</RelativeLayout>
